--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="logo">
-            <img src="/img/valorant-logo-3D72D9117F-seeklogo.com.png">
+            <img src="./img/valorant-logo-3D72D9117F-seeklogo.com.png">
             <h1>발로란트 총 팁</h1>
         </div>
         <hr>
@@ -25,7 +25,7 @@
                 <label for="tab4">소총</label>
                 <div id="sub_weapon" class="tabContent">
                     <ul>
-                        <li>클래식<a href="/sebu_page/classic.html"><img src=https://s-valorant-api.op.gg/Assets/Weapons/29A0CFAB-485B-F5D5-779A-B59F85E204A8.png?image=q_auto:good,f_webp,h_228&v=2606385152></a></li>
+                        <li>클래식<a href="sebu_page/classic.html"><img src=https://s-valorant-api.op.gg/Assets/Weapons/29A0CFAB-485B-F5D5-779A-B59F85E204A8.png?image=q_auto:good,f_webp,h_228&v=2606385152></a></li>
                         <li>쇼티<a href="sebu_page/shorty.html"><img src=https://s-valorant-api.op.gg/Assets/Weapons/42DA8CCC-40D5-AFFC-BEEC-15AA47B42EDA.png?image=q_auto:good,f_webp,h_228&v=2606385152></a></li>
                         <li>프렌지<a href="sebu_page/frenzy.html"><img src=https://s-valorant-api.op.gg/Assets/Weapons/44D4E95C-4157-0037-81B2-17841BF2E8E3.png?image=q_auto:good,f_webp,h_228&v=2606385152></a></li>
                         <li>고스트<a href="sebu_page/ghost.html"><img src=https://s-valorant-api.op.gg/Assets/Weapons/1BAA85B4-4C70-1284-64BB-6481DFC3BB4E.png?image=q_auto:good,f_webp,h_228&v=2606385152></a></li>
