--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="logo">
-            <img src="./img/valorant-logo-3D72D9117F-seeklogo.com.png">
+            <img src="./img/Valogo.png">
             <h1>발로란트 총 팁</h1>
         </div>
         <hr>
